--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,25 +1,33 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
-  "icons": [
-    {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
-    },
-    {
-      "src": "logo192.png",
-      "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "logo512.png",
-      "type": "image/png",
-      "sizes": "512x512"
+  "name": "BrowseIt, for Knowit",
+  "short_name": "BrowseIt",
+  "version": "2.1.0",
+  "manifest_version": 2,
+  "offline_enabled": true,
+
+  "description": "For the noobs and the veterans alike. Has all important links, your introductory todolist, and a map of meeting rooms.",
+  "homepage_url": "https://knowit.no",
+  "permissions": ["https://projects.knowit.no/*"],
+
+  "browser_action": {
+    "default_title": "BrowseIt",
+    "default_popup": "index.html"
+  },
+
+  "commands": {
+    "_execute_browser_action": {
+      "suggested_key": {
+        "default": "Ctrl+Shift+B",
+        "mac": "MacCtrl+Shift+B"
+      },
+      "description": "Open BrowseIt"
     }
-  ],
-  "start_url": ".",
-  "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  },
+
+  "icons": {
+    "48" : "img/48.png",
+    "128" : "img/128.png"
+  },
+
+  "content_security_policy": "script-src 'self'; object-src 'self'"
 }
